--- a/pmkn-frontend/src/index.css
+++ b/pmkn-frontend/src/index.css
@@ -1,10 +1,11 @@
 .stakeunit {
-    border: 1px solid black;
-    border-radius: 5px;
-    max-width: 300px;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  max-width: 300px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px 0px;
 }
 
 /* Chrome, Safari, Edge, Opera */
