--- a/pmkn-frontend/src/index.css
+++ b/pmkn-frontend/src/index.css
@@ -12,10 +12,12 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  appearance:none;
   margin: 0;
 }
 
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
